--- a/src/app/pages/books-form/books-form.page.html
+++ b/src/app/pages/books-form/books-form.page.html
@@ -24,6 +24,8 @@
       <ion-label position="floating">Ano de Publicação</ion-label>
       <ion-input type="number" [(ngModel)]="book.year" name="year" required></ion-input>
     </ion-item>
-    <ion-button expand="full" type="submit">Salvar</ion-button>
-  </form>
+    <ion-button expand="full" type="submit" class="custom-button">
+      Salvar
+    </ion-button>
+      </form>
 </ion-content>
