--- a/src/app/pages/books-form/books-form.page.html
+++ b/src/app/pages/books-form/books-form.page.html
@@ -21,11 +21,17 @@
       <ion-input [(ngModel)]="book.autor" name="autor" required></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label position="floating">Ano de Publicação</ion-label>
-      <ion-input type="number" [(ngModel)]="book.year" name="year" required></ion-input>
+      <ion-label position="floating">Autor</ion-label>
+      <ion-input [(ngModel)]="book.autor" name="autor" required></ion-input>
     </ion-item>
-    <ion-button expand="full" type="submit" class="custom-button">
-      Salvar
-    </ion-button>
-      </form>
+    <ion-item>
+      <ion-label position="floating">Gênero</ion-label>
+      <ion-input [(ngModel)]="book.autor" name="autor" required></ion-input>
+    </ion-item>
+    <div class="button-container">
+      <ion-button expand="full" type="submit" class="custom-button-salvar">
+        Salvar
+      </ion-button>
+    </div>
+  </form>
 </ion-content>
