android studio add

--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -68,7 +68,7 @@ ion-button.login-button:hover {
 
 /* Estilo para o ion-input dentro do ion-item */
 .login-item ion-input {
-  --background: #e0f7fa; /* Fundo azul claro para o campo de entrada */
+  --background: #b1e8f0; /* Fundo azul claro para o campo de entrada */
   --border-color: #0a0a0a; /* Cor da borda */
   --border-width: 1px; /* Largura da borda */
   --border-style: solid; /* Estilo da borda */
